<resources>
    <string name="app_name">Spiice-ui-challenge</string>
    <string name="title_activity_spiice_nav">SpiiceNavActivity</string>

    <!--    NAV MENU-->
    <string name="title_feed">Feed</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_messages">Messages</string>
    <string name="title_activity_main2">Main2Activity</string>

    <!--    ON BOARDING-->
    <string name="on_board_header">Spiice</string>
    <string name="on_board_footer_1">Find projects from companies\n everywhere in the word</string>
    <string name="on_board_footer_2">Make money while working\n on awesome projects</string>
    <string name="on_board_footer_3">Chat with others freelancers\n and develop your network</string>
    <string name="on_board_footer_4">Work hard and level up!</string>
    <string name="on_board_footer_5">Enjoy your progress!</string>
    <string name="label_btn_starter">Discover the platform</string>
    <string name="label_login_footer">You have an account ? Log-in</string>
    <string name="label_header_sign_in">Sign-in</string>
    <string name="label_btn_sign_in">Sign-in</string>
    <string name="label_register_footer">Don\'t have an account ? Register</string>
    <string name="label_header_sign_up">Sign-up</string>
    <string name="label_hint_first_name">First name</string>
    <string name="label_hint_last_name">Last name</string>
    <string name="label_hint_email">Email</string>
    <string name="label_hint_password">password</string>
    <string name="label_btn_sign_up">Sign-up</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    FEED INFO-->
    <string name="label_18_percentage">18%</string>
    <string name="label_27_total_number">27 k</string>
    <string name="label_total_gains">Total Gains</string>
    <string name="label_resume">Resume</string>
    <string name="label_active_projects">Active projects</string>
    <string name="label_view_all">View all</string>
    <string name="label_amel_rio">Amel Rio</string>
    <string name="label_pending">Pending</string>
    <string name="label_own_project">You are in charge of this project</string>


    <!--    PROFILE-->
    <string name="label_description">Description</string>
    <string name="label_average_rating">Average rating</string>
    <string name="label_last_review">Last review:</string>
    <string name="label_portfolio">Portfolio</string>

    <!--    REVIEWS-->
    <string name="label_rating">Rating</string>
    <string name="btn_label_send">Send</string>
    <string name="label_hint_message">Message</string>
    <string name="label_make_proposition">Make a proposition</string>
    <string name="label_make_a_proposition">Make a proposition</string>
    <string name="btn_label_send_work">send your work</string>
    <string name="label_send_your_work">Send your work</string>
    <string name="label_upload_file">Upload file</string>

    <!--    SEARCH-->
    <string-array name="array_filters">
        <item>Filters</item>
        <item>Filters 2</item>
        <item>Filters 3</item>
    </string-array>

    <!-- PREF LOGIN -->
    <string name="pref_isLogin_key">user_login</string>
    <string name="pref_login_name_key">login_name</string>
    <string name="pref_login_email_key">login_email</string>

    <string name="pref_login_avatar_key">user_avatar</string>
    <string name="pref_login_access_token_key">access_token</string>
    <string name="pref_login_refresh_token_key">refresh_token</string>
    <string name="pref_first_time_login_key">first_time_login</string>

    <string name="error_empty_input">Invalid input</string>
    <string name="error_invalid_email">Invalid input</string>
    <string name="error_invalid_credentials">Username or password incorrect</string>
    <string name="error_no_network_connectivity">No internet connection</string>

    <!--    NOTIFICATION-->
    <string name="notification_type_message">message</string>
    <string name="notification_type_register">register</string>


</resources>
