<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/feedFragment">
    <fragment
        android:id="@+id/feedFragment"
        android:name="com.cheise_proj.spiice_ui_challenge.spiice.ui.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" >
        <action
            android:id="@+id/action_feedFragment_to_currentProjectFragment"
            app:destination="@id/currentProjectFragment" />
        <action
            android:id="@+id/action_feedFragment_to_feedDetailFragment"
            app:destination="@id/feedDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.cheise_proj.spiice_ui_challenge.spiice.ui.messages.MessagesFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.cheise_proj.spiice_ui_challenge.spiice.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_searchFragment_to_postDetailFragment"
            app:destination="@id/postDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.cheise_proj.spiice_ui_challenge.spiice.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_profileReviewsFragment"
            app:destination="@id/profileReviewsFragment" />
    </fragment>
    <fragment
        android:id="@+id/profileReviewsFragment"
        android:name="com.cheise_proj.spiice_ui_challenge.spiice.ui.profile.ProfileReviewsFragment"
        android:label="Reviews"
        tools:layout="@layout/fragment_profile_reviews" />
    <fragment
        android:id="@+id/propositionFragment"
        android:name="com.cheise_proj.spiice_ui_challenge.spiice.ui.search.PropositionFragment"
        android:label="@string/label_make_proposition"
        tools:layout="@layout/fragment_proposition">
        <argument
            android:name="proposition_id"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/postDetailFragment"
        android:name="com.cheise_proj.spiice_ui_challenge.spiice.ui.search.PostDetailFragment"
        android:label="Detail"
        tools:layout="@layout/fragment_post_detail">
        <argument
            android:name="post_id"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_postDetailFragment_to_propositionFragment"
            app:destination="@id/propositionFragment" />
    </fragment>
    <fragment
        android:id="@+id/uploadWorkFragment"
        android:name="com.cheise_proj.spiice_ui_challenge.spiice.ui.project.UploadWorkFragment"
        android:label="Upload Work"
        tools:layout="@layout/fragment_upload_work">
        <argument
            android:name="post_id"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/feedDetailFragment"
        android:name="com.cheise_proj.spiice_ui_challenge.spiice.ui.feed.FeedDetailFragment"
        android:label="fragment_feed_detail"
        tools:layout="@layout/fragment_feed_detail" />
    <fragment
        android:id="@+id/currentProjectFragment"
        android:name="com.cheise_proj.spiice_ui_challenge.spiice.ui.project.CurrentProjectFragment"
        android:label="@string/label_active_projects"
        tools:layout="@layout/fragment_current_project">
        <action
            android:id="@+id/action_currentProjectFragment_to_uploadWorkFragment"
            app:destination="@id/uploadWorkFragment" />
        <argument
            android:name="project"
            app:argType="com.cheise_proj.spiice_ui_challenge.spiice.model.Project" />
    </fragment>
</navigation>
