<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".spiice.ui.feed.FeedFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--    HEADER-->
        <TextView
            android:id="@+id/tv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_medium"
            android:text="@string/label_resume"
            android:textColor="@color/color_text_black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <!--    TOTAL GAINS-->
        <TextView
            android:id="@+id/tv_total_gains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:text="@string/label_total_gains"
            android:textAlignment="viewStart"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.024"
            app:layout_constraintStart_toStartOf="@id/tv_total_number"
            app:layout_constraintTop_toBottomOf="@id/tv_header" />

        <!--    TOTAL NUMBER-->
        <TextView
            android:id="@+id/tv_total_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:padding="8dp"
            android:text="@string/label_27_total_number"
            android:textColor="@color/color_text_black"
            android:textSize="61sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/chart_bar"
            app:layout_constraintTop_toBottomOf="@id/tv_total_gains" />

        <!--    TOTAL PERCENTAGE-->
        <TextView
            android:id="@+id/tv_total_percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="100dp"
            android:clickable="true"
            android:drawableStart="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/label_18_percentage"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/chart_bar"
            app:layout_constraintTop_toBottomOf="@id/tv_total_number" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/chart_bar"
            android:layout_width="0dp"
            android:layout_height="240dp"
            app:layout_constraintEnd_toStartOf="@id/tv_total_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_header" />

        <!--    ACTIVE PROJECT-->
        <TextView
            android:id="@+id/tv_active_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_active_projects"
            android:textColor="@color/color_text_black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/btn_view_all"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart_bar" />

        <!--    VIEW ALL BUTTON-->

        <FrameLayout
            android:id="@+id/btn_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="105dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chart_bar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/secondary_background"
                android:padding="8dp"
                android:text="@string/label_view_all"
                android:textColor="@color/color_text_black"
                android:textSize="16sp" />
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:nestedScrollingEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_active_project"
            tools:listitem="@layout/list_project" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>